--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <!--        阿里支付接口-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.22.37.ALL</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
